# Web2_Parcial1_CC

./: .gitignore  database.db  main.py  pyproject.toml
src/: dependencies.py
src/database/: database.py
src/database/models/: carrera_model.py  maestro_model.py  materia_carrera_model.py  materia_model.py
src/routers/: carrera_router.py  maestro_router.py  materia_carrera_router.py  materia_router.py
